--- a/templates/index_page.html
+++ b/templates/index_page.html
@@ -3,7 +3,7 @@
     <link rel="stylesheet" type="text/css" href="/static/css/main.css">
 {% endblock %}
 {% block content %}
-    <div class="grid">
+    <div class="grid" id="main-grid">
         <div class="grid-sizer"></div>
         {% for work in works %}
             <div class="grid-item {% if forloop.first %}{% else %}{% ifequal work.case 0 %}grid-item--height3
@@ -13,12 +13,11 @@
                     <img src="/static/img/{{ work.courser.name_en }}.png">
                 </div>
 
-                <div class="mini-title">
+                <div class="mini-title link-6">
                     <p><a href="
-
                             {% if user.is_superuser %}{% url 'homework_detail' work.pk %}{% elif user.is_authenticated %}{% url 'add_submission' work.pk %}{% else %}#{% endif %}"
                             {% if not user.is_authenticated %} data-toggle="modal"
-                          data-target="#login-modal"{% endif %}>[{{ work.courser.name }}]{{ work.name }}</a></p>
+                          data-target="#login-modal"{% endif %} class="demo">[{{ work.courser.name }}]<br>{{ work.name }}</a></p>
                 </div>
             </div>
         {% endfor %}
