--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,9 +1,15 @@
 html,
 body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    background: #16a085;
+  width    : 100%;
+  height   : 100%;
+  margin   : 0;
+  overflow : hidden;
+}
+
+
+.bg{
+  background-image: url(../img/background.jpg);
+  background-position: 0px 0px;
 }
 
 .wrap {
