--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,3 @@
-{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,45 +9,87 @@
     <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.css">
     <link rel="stylesheet" type="text/javascript" href="/static/js/bootstrap.js">
     <link rel="stylesheet" type="text/css" href="/static/css/lr.css">
+    <!-- <link rel="stylesheet" type="text/css" href="/static/css/component.css"> -->
     {% block extra_css %}
     {% endblock %}
 </head>
 <body>
-{% block header %}
-    {% include 'header.html' %}
-{% endblock %}
-<div class="container main-content" style="padding-top: 70px">
-    {% block content %}
-    {% endblock %}
-</div>
-<script src="/static/js/jquery-3.1.1.min.js"></script>
-<script>
-    $.ajaxSetup({
-        data: {csrfmiddlewaretoken: '{{ csrf_token }}'}
-    });
-</script>
-<script src="/static/js/bootstrap.min.js"></script>
-<script src="/static/js/masonry.pkgd.min.js"></script>
-<script src="/static/js/jquery.gradientify.min.js"></script>
 
-<!-- 登录注册控件js -->
-<script src="/static/js/lr.js"></script>
+    <div class="bg">
+        {% block header %}
+        {% include 'header.html' %}
+        {% endblock %}
 
-<script>
-    $(".logout-button").click(function () {
-        $.ajax({
-            type: "POST",
-            url: "{% url 'logout' %}",
-            success: function (data) {
-                location.replace("{% url 'index' %}");
-            },
-            error: function (XMLHttpRequest, textStatus, errorThrown) {
-                alert(XMLHttpRequest.responseText);
-            }
+        <div class="main-content" id="intro" style="padding-top: 70px;">
+            {% block content %}
+            {% endblock %}
+        </div>
+        <div id="goTop" class="goTop"></div>
+    </div>
+    <script src="/static/js/jquery-3.1.1.min.js"></script>
+    <script>
+        $.ajaxSetup({
+            data: {csrfmiddlewaretoken: '{{ csrf_token }}'}
         });
-        return false;
+    </script>
+    <script src="/static/js/bootstrap.min.js"></script>
+    <script src="/static/js/masonry.pkgd.min.js"></script>
+    <!-- <script src="/static/js/jquery.gradientify.min.js"></script> -->
+    <script src="/static/js/jquery.toTop.min.js"></script>
+
+    <!-- 背景滚动 -->
+    <script src="/static/js/autoBackgroundScroll.js"></script>
+    <script>
+        $(function(){
+            $('body').autoBackgroundScroll({
+                speed: 0.3,
+                direction1: 'bottom',
+                direction2: 'right',
+                imageWidth: 2000,
+                imageHeight: 2000
+            });
+        });
+    </script>
+    <!-- 自动隐藏导航 -->
+    <script src="/static/js/jquery.bootstrap-autohidingnavbar.min.js"></script>
+    <script>$("nav.navbar-fixed-top").autoHidingNavbar();</script>
+    <!-- 登录注册控件js -->
+    <script src="/static/js/lr.js"></script>
+    <script>
+        $(".logout-button").click(function () {
+            $.ajax({
+                type: "POST",
+                url: "{% url 'logout' %}",
+                success: function (data) {
+                    location.replace("{% url 'index' %}");
+                },
+                error: function (XMLHttpRequest, textStatus, errorThrown) {
+                    alert(XMLHttpRequest.responseText);
+                }
+            });
+            return false;
+        });
+    </script>
+    <!-- 回到顶部 -->
+    <script type="text/javascript">
+    $(window).scroll(function(){
+        var sc=$(window).scrollTop();
+        var rwidth=$(window).width()+$(document).scrollLeft();
+        var rheight=$(window).height()+$(document).scrollTop();
+        if(sc>0){
+            $("#goTop").css("display","block");
+            $("#goTop").css("left",(rwidth-80)+"px");
+            $("#goTop").css("top",(rheight-120)+"px");
+        }else{
+            $("#goTop").css("display","none");
+        }
+    });
+    $("#goTop").click(function(){
+        $('body,html').animate({scrollTop:0},300);
     });
 </script>
+
+
 {% block extra_js %}
 {% endblock %}
 </body>
