--- a/templates/header.html
+++ b/templates/header.html
@@ -1,7 +1,5 @@
-<nav class="navbar navbar-default navbar-fixed-top navbar-inverse" role="navigation">
+<nav class="navbar navbar-fixed-top navbar-inverse" role="navigation">
     <div class="container">
-
-
         <div class="navbar-header">
             <!-- 移动端小展开图标 -->
             <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
@@ -11,12 +9,14 @@
                 <span class="icon-bar"></span>
             </button>
             <!--移动端小展开图标 -->
+
             <!-- 大标题 -->
-            <a href="{% url 'index' %}" class="navbar-brand">SAST Homework</a>
+            <a href="{% url 'index' %}" class="navbar-brand navbar-left">SAST Homework</a>
             <!-- 大标题 -->
         </div>
+
         <!--注册登录 -->
-        <div>
+        <div >
             {% if user.is_authenticated %}
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#" role="button"><span></span> {{ user.username }}</a></li>
@@ -26,7 +26,7 @@
             {% else %}
                 <ul class="nav navbar-nav navbar-right">
 
-                    <li><a href="#" role="button" data-toggle="modal" data-target="#login-modal"><span
+                    <li ><a href="#" role="button" data-toggle="modal" data-target="#login-modal"><span
                             class="glyphicon glyphicon-log-in"></span> 登录</a></li>
                 </ul>
             {% endif %}
