--- a/templates/header.html
+++ b/templates/header.html
@@ -57,6 +57,21 @@
                 <!-- 多媒体部 -->
                 <li><a href="{% url 'list_homework' 'multi_media' %}">多媒体部</a></li>
                 <!-- 多媒体部 -->
+
+                <!-- 计软院科协-->
+                <li class="dropdown ">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                        计软网安院科协
+                        <span class="caret"></span>
+                    </a>
+                    <ul class="dropdown-menu">
+                        {% for courser in sa_coursers %}
+                            <li><a href="{% url 'list_homework' courser.name_en %}">{{ courser.name }}</a></li>
+                        {% endfor %}
+                    </ul>
+                </li>
+                <!-- 计软院科协-->
+
                 {% if user.is_authenticated %}
                 <li><a href="{% url 'list_my_submissions' %}">我的提交记录</a></li>
                 {% endif %}
