--- a/templates/index_page.html
+++ b/templates/index_page.html
@@ -24,6 +24,6 @@
     </div>
 {% endblock %}
 {% block extra_js %}
-    <!-- 主要的,更新题目的js -->
+    <!-- 主页面js -->
     <script src="/static/js/main.js"></script>
 {% endblock %}
