--- a/templates/header.html
+++ b/templates/header.html
@@ -35,7 +35,7 @@
 
         <div class="collapse navbar-collapse" id="navbar-collapse" id="navbar">
             <ul class="nav navbar-nav">
-                <!-- 计算机部 -->
+                <!-- 软件研发中心 -->
                 <li class="dropdown ">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                         软件研发中心
@@ -47,7 +47,7 @@
                         {% endfor %}
                     </ul>
                 </li>
-                <!-- 计算机部 -->
+                <!-- 软件研发中心 -->
 
                 <!-- 电子部 -->
                 <li><a href="{% url 'list_homework' 'ee' %}">电子部</a></li>
@@ -55,7 +55,7 @@
 
 
                 <!-- 多媒体部 -->
-                <li><a href="{% url 'list_homework' 'multi_media' %}">多媒体部</a></li>
+                <li><a href="{% url 'list_homework' 'multi_media' %}">多媒体技术部</a></li>
                 <!-- 多媒体部 -->
 
                 <!-- 计软院科协-->
@@ -80,7 +80,7 @@
     </div>
 </nav>
 
-
+<!-- 登陆模块 -->
 <!-- BEGIN # MODAL LOGIN -->
 <div class="modal fade" id="login-modal" tabindex="-1" role="dial aria-labelledby            ="
      myModalLabel" aria-hidden="true" style="display: none;">
