--- a/templates/header.html
+++ b/templates/header.html
@@ -82,8 +82,7 @@
 
 <!-- 登陆模块 -->
 <!-- BEGIN # MODAL LOGIN -->
-<div class="modal fade" id="login-modal" tabindex="-1" role="dial aria-labelledby            ="
-     myModalLabel" aria-hidden="true" style="display: none;">
+<div class="modal fade" id="login-modal" tabindex="-1" role="dial" aria-labelledby="myModalLabel" aria-hidden="true" style="display: none;" data-backdrop="false">
 <div class="modal-dialog">
     <div class="modal-content">
         <div class="modal-header" align="center">
