--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -4,7 +4,7 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 /*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
-/*ç•¥ä½œä¿®æ”¹*/
+/*ÂÔ×÷ÐÞ¸Ä*/
 html {
   font-family: sans-serif;
   -webkit-text-size-adjust: 100%;
@@ -1087,7 +1087,7 @@ body {
   font-size: 14px;
   line-height: 1.42857143;
   color: #333;
-  background-image: url(../img/background.jpg);
+  background-color: #fff;
   background-position: 0px 0px;
 }
 input,
@@ -4597,7 +4597,7 @@ fieldset[disabled] .navbar-default .btn-link:focus {
 .navbar-inverse .navbar-brand {
   color: #9d9d9d;
 }
-.navbar-inverse .navbar-brand:hover,
+.navbar-inverse .navbar-brand:hover,C
 .navbar-inverse .navbar-brand:focus {
   color: #fff;
   background-color: transparent;
