--- a/templates/base.html
+++ b/templates/base.html
@@ -3,51 +3,35 @@
 <head>
     <title>校科协作业平台</title>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.css">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge，chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/static/css/lr.css">
+    <script src="/static/js/html5shiv.js"></script>
+
     {% block extra_css %}
     {% endblock %}
 </head>
 <body>
 
-    <div class="bg">
-        {% block header %}
-        {% include 'header.html' %}
+    {% block header %}
+    {% include 'header.html' %}
+    {% endblock %}
+    <div class="main-content" id="intro" style="padding-top: 70px;">
+        {% block content %}
         {% endblock %}
-
-        <div class="main-content" id="intro" style="padding-top: 70px;">
-            {% block content %}
-            {% endblock %}
-        </div>
-        <div id="goTop" class="goTop"></div>
     </div>
+    <div id="goTop" class="goTop"></div>
+
     <script src="/static/js/jquery-3.1.1.min.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
     <script src="/static/js/masonry.pkgd.min.js"></script>
-    <!-- <script src="/static/js/jquery.gradientify.min.js"></script> -->
+    <script src="/static/js/jquery.gradientify.min.js"></script>
     <script>
         $.ajaxSetup({
             data: {csrfmiddlewaretoken: '{{ csrf_token }}'}
         });
-    </script>
-    <!-- 背景滚动 -->
-    <script src="/static/js/autoBackgroundScroll.js"></script>
-    <script>
-        $(function(){
-            $('body').autoBackgroundScroll({
-                speed: 0.3,
-                direction1: 'bottom',
-                direction2: 'right',
-                imageWidth: 2000,
-                imageHeight: 2000
-            });
-        });
-    </script>
-    <!-- 自动隐藏导航 -->
-    <script src="/static/js/jquery.bootstrap-autohidingnavbar.min.js"></script>
-    <script>$("nav.navbar-fixed-top").autoHidingNavbar();</script>
+    </script>  
     <!-- 登录注册控件js -->
     <script src="/static/js/lr.js"></script>
     <script>
@@ -67,25 +51,28 @@
     </script>
     <!-- 回到顶部 -->
     <script type="text/javascript">
-    $(window).scroll(function(){
-        var sc=$(window).scrollTop();
-        var rwidth=$(window).width()+$(document).scrollLeft();
-        var rheight=$(window).height()+$(document).scrollTop();
-        if(sc>0){
-            $("#goTop").css("display","block");
-            $("#goTop").css("left",(rwidth-80)+"px");
-            $("#goTop").css("top",(rheight-120)+"px");
-        }else{
-            $("#goTop").css("display","none");
-        }
-    });
-    $("#goTop").click(function(){
-        $('body,html').animate({scrollTop:0},300);
-    });
-</script>
-
-
-{% block extra_js %}
-{% endblock %}
+        $(window).scroll(function(){
+            var sc=$(window).scrollTop();
+            var rwidth=$(window).width()+$(document).scrollLeft();
+            var rheight=$(window).height()+$(document).scrollTop();
+            if(sc>0){
+                $("#goTop").css("display","block");
+                $("#goTop").css("left",(rwidth-65)+"px");
+                $("#goTop").css("top",(rheight-120)+"px");
+            }else{
+                $("#goTop").css("display","none");
+            }
+        });
+        $("#goTop").click(function(){
+            $('body,html').animate({scrollTop:0},300);
+        });
+    </script>
+    <!-- 背景滚动 -->
+    <!-- <script src="/static/js/autoBackgroundScroll.js"></script>     -->
+    <!-- 自动隐藏导航 -->
+    <script src="/static/js/jquery.bootstrap-autohidingnavbar.min.js"></script>
+    <script>$(".navbar-fixed-top").autoHidingNavbar();</script>
+    {% block extra_js %}
+    {% endblock %}
 </body>
 </html>
