--- a/static/css/main.css
+++ b/static/css/main.css
@@ -48,7 +48,7 @@ img{
 .mini-title a{
 	color:#333;
   max-width: 100%;
-  font-size: 1.5pt;
+  font-size: 0.8em;
   font-weight: bold; 
   font-family: "Hiragino Sans GB", "Microsoft YaHei", sans-serif;
   outline: none;
