--- a/templates/index_page.html
+++ b/templates/index_page.html
@@ -8,16 +8,15 @@
         {% for work in works %}
             <div class="grid-item {% if forloop.first %}{% else %}{% ifequal work.case 0 %}grid-item--height3
             {% endifequal %}{% ifequal work.case 1 %}grid-item--height2{% endifequal %}{% endif %}
-            ">
+            " onClick="window.location.href='{% if user.is_superuser %}{% url 'homework_detail' work.pk %}{% elif user.is_authenticated %}{% url 'add_submission' work.pk %}{% else %}#{% endif %}'" {% if not user.is_authenticated %} data-toggle="modal" data-target="#login-modal"{% endif %}" >
                 <div class="mini-img">
                     <img src="/static/img/{{ work.courser.name_en }}.png">
                 </div>
-
-                <div class="mini-title link-6">
+                <div class="mini-title">
                     <p><a href="
                             {% if user.is_superuser %}{% url 'homework_detail' work.pk %}{% elif user.is_authenticated %}{% url 'add_submission' work.pk %}{% else %}#{% endif %}"
                             {% if not user.is_authenticated %} data-toggle="modal"
-                          data-target="#login-modal"{% endif %} class="demo">[{{ work.courser.name }}]<br>{{ work.name }}</a></p>
+                          data-target="#login-modal"{% endif %} >[{{ work.courser.name }}]<br>{{ work.name }}</a></p>
                 </div>
             </div>
         {% endfor %}
