移动端显示优化

--- a/templates/base.html
+++ b/templates/base.html
@@ -24,9 +24,11 @@
     <div id="goTop" class="goTop"></div>
 
     <script src="/static/js/jquery-3.1.1.min.js"></script>
+    <script src="/static/js/jquery.gradientify.min.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
     <script src="/static/js/masonry.pkgd.min.js"></script>
-    <script src="/static/js/jquery.gradientify.min.js"></script>
+    <!-- 主页面js -->
+    <script src="/static/js/main.js"></script>
     <script>
         $.ajaxSetup({
             data: {csrfmiddlewaretoken: '{{ csrf_token }}'}
