--- a/templates/base.html
+++ b/templates/base.html
@@ -22,13 +22,13 @@
         {% endblock %}
     </div>
     <div id="goTop" class="goTop"></div>
-
-    <script src="/static/js/jquery-3.1.1.min.js"></script>
+    </div>
+    <!-- <script src="/static/js/jquery-3.1.1.min.js"></script> -->
+    <script src="https://cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://cdn.bootcss.com/jquery-mobile/1.3.0/jquery.mobile.min.js"></script>
+    <!-- <script src="/static/js/bootstrap.min.js"></script> -->
+    <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="/static/js/jquery.gradientify.min.js"></script>
-    <script src="/static/js/bootstrap.min.js"></script>
-    <script src="/static/js/masonry.pkgd.min.js"></script>
-    <!-- 主页面js -->
-    <script src="/static/js/main.js"></script>
     <script>
         $.ajaxSetup({
             data: {csrfmiddlewaretoken: '{{ csrf_token }}'}
@@ -70,7 +70,7 @@
         });
     </script>
     <!-- 背景滚动 -->
-    <!-- <script src="/static/js/autoBackgroundScroll.js"></script>     -->
+    <script src="/static/js/autoBackgroundScroll.js"></script>
     <!-- 自动隐藏导航 -->
     <script src="/static/js/jquery.bootstrap-autohidingnavbar.min.js"></script>
     <script>$(".navbar-fixed-top").autoHidingNavbar();</script>
@@ -78,3 +78,7 @@
     {% endblock %}
 </body>
 </html>
+<!-- 
+<script type="text/javascript">
+    
+</script> -->
