--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
     </div>
     <!-- <script src="/static/js/jquery-3.1.1.min.js"></script> -->
     <script src="https://cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>
-    <script src="https://cdn.bootcss.com/jquery-mobile/1.3.0/jquery.mobile.min.js"></script>
+    <!-- <script src="https://cdn.bootcss.com/jquery-mobile/1.3.0/jquery.mobile.min.js"></script> -->
     <!-- <script src="/static/js/bootstrap.min.js"></script> -->
     <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="/static/js/jquery.gradientify.min.js"></script>
