解决上文件以及JSbug

--- a/submission_system/templates/add_submission.html
+++ b/submission_system/templates/add_submission.html
@@ -22,7 +22,7 @@
             <label for="code">如果你不会使用markdown语法输入代码，请务必将代码填写在这里↓</label>
             <textarea class="form-control" rows="10" name="code" id="code"></textarea>
             <label for=picture>如果你需要上传图片，请在这里选择</label>
-            <input id="picture" accept="image/*" type="file" name='picture'>
+            <input id="picture" type="file" name='picture'>
             <hr>
             <button class="btn btn-success" onclick="submit()">提交</button>
             <br>
